objects/ssot__Visit__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActualVisitEndTime__c</fullName>
        <label>Actual Visit End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ActualVisitLatitude__c</fullName>
        <label>Actual Visit Latitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ActualVisitLongitude__c</fullName>
        <label>Actual Visit Longitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ActualVisitStartTime__c</fullName>
        <label>Actual Visit Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__BusinessUnitId__c</fullName>
        <label>Business Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CompletionDate__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DistributionIssueCount__c</fullName>
        <label>Distribution Issue Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DurationNumber__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DurationUOMId__c</fullName>
        <label>Duration Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HasDistributionIssues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Distribution Issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__HasOutOfStockIssue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out Of Stock Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Visit Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAllDayVisit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Day Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OutOfStockIssueCount__c</fullName>
        <label>Out Of Stock Issue Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutOfStockRateFocusArea__c</fullName>
        <label>Out Of Stock Rate Focus Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PerfectStoreIndexScoreNumber__c</fullName>
        <label>Perfect Store Index Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PerfectStoreQuotientNumber__c</fullName>
        <label>Perfect Store Quotient</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PlaceRecordId__c</fullName>
        <label>Place Record</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PlaceRecordObject__c</fullName>
        <label>Place Record Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PlannedVisitDate__c</fullName>
        <label>Planned Visit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PlannedVisitEndTime__c</fullName>
        <label>Planned Visit End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PlannedVisitStartTime__c</fullName>
        <label>Planned Visit Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Priority__c</fullName>
        <label>Priority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductDistributionRateFocusArea__c</fullName>
        <label>Product Distribution Rate Focus Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductDistributionRate__c</fullName>
        <label>Product Distribution Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Purpose__c</fullName>
        <label>Purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StatusReasonText__c</fullName>
        <label>Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VisitorRecordId__c</fullName>
        <label>Visitor Record</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VisitorRecordObject__c</fullName>
        <label>Visitor Record Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>